# catalog

./: .env.sample  .gitignore  Makefile  README.md  docker-compose.yaml  pyproject.toml
src/: orm.py
src/alembic/: env.py
src/alembic/versions/: 14dc5397a390_initial.py  443e7e1e5378_postgres.py  56f9b475c92a_inicial.py  9177008d91d8_initial.py  9a29f0bea2eb_unit_indexing.py  ad9a1cb33cd1_initial.py  bb5c67771392_postgres.py  c26999586cb0_reiniciando.py  cb72ae5e2b8d_correction_price.py  e9a19ea6d917_add_coluns_service.py
src/compositions/: models.py  repository.py  schemas.py  services.py
src/entrypoints/fastapi_app/: main.py
src/feedstock/: models.py  repository.py  schemas.py  services.py
src/feedstock/entrypoints/: clients.py
src/items/: models.py  repository.py  schemas.py  services.py
src/price/: models.py  repository.py
src/prices/: models.py  repository.py  schemas.py  services.py
src/services/: models.py  repository.py  schemas.py  services.py
src/units/: models.py  repository.py  schemas.py  services.py
src/units/entrypoints/: clients.py
tests/: conftest.py  test_database_population.py
tests/integration/: conftest.py
tests/integration/composition/: test_the_repository_and_integration.py
tests/units/compositions/: conftest.py  test_models.py  test_repository.py  test_service.py
tests/units/feedstock/: conftest.py  test_models.py  test_repository.py  test_services.py
tests/units/items/: conftest.py  test_models.py  test_repository.py  test_services.py
tests/units/services/: conftest.py  test_models.py
(+10 files in other folders)
