[tool.poetry]
name = "catalog"
version = "0.1.0"
description = "Product Catalog System"
authors = ["Egor C. Rodrigues"]

[tool.poetry.dependencies]
python = "^3.9"
databases = "^0.5.1"
uvicorn = {version = "^0.15.0", extras = ["standard"]}
fastapi = "^0.68.1"
prettyconf = "^2.2.1"
alembic = "^1.7.1"
asyncpg = "^0.24.0"
psycopg2-binary = "^2.9.1"

[tool.poetry.dev-dependencies]
black = "^21.8b0"
coverage = "^5.5"
flake8 = "^3.9.2"
isort = "^5.9.3"
mypy = "^0.910"
pytest = "^6.2.5"
pytest-cov = "^2.12.1"
pytest-asyncio = "^0.15.1"
aiosqlite = "^0.17.0"
selenium = "^3.141.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
